<resources>
    <string name="app_name">Ecoistic</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_your_account">Sign in to your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="welcome">Welcome!</string>
    <string name="already_have_an_account_login">Already have an account, Login?</string>
    <string name="database_type">Test</string>
    <string name="quote">Recycle your today for better tomorrow</string>
    <string name="title_activity_user_page">UserPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="weekly_report">Weekly Report</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="completed_task">Completed Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task">Task</string>
    <string name="events">Events</string>
    <string name="dry_waste">Dry Waste</string>
    <string name="wet_waste">Wet waste</string>
    <string name="others">Others</string>
    <string name="every_24_hours">*Every 24 hours</string>
    <string name="clean_my_area">Clean my area</string>
    <string name="innovate">Innovate</string>
    <string name="daily_tasks">Daily tasks</string>
    <string name="enter_harabazar">Hara Bazar</string>
    <string name="update_your_progress">Update your Progress</string>
    <string name="go">GO!</string>
    <string name="update">Update</string>
    <string name="title_activity_task_proof">TaskProof</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit">Submit</string>
    <string name="upload_image">Upload Image</string>
    <string name="share">Share</string>
    <string name="file_a_complaint">File a complaint</string>
    <string name="organize_an_event">Organize an event</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="green_points">Green Points</string>
    <string name="description">Description</string>
    <string name="log_out">Log out</string>
    <string name="buy">Buy</string>
    <string name="tap_the_item_to_buy">Tap the item to buy</string>
    <string name="confirm">Confirm</string>
    <string name="address">Address</string>
    <string name="orders">Orders</string>
    <string name="hara_bhara_bazar">Hara Bhara Bazar</string>
    <string name="green_points_awarded_5">(Green points awarded: 25)</string>
    <string name="option">option</string>
    <string name="quiz">Quiz</string>

</resources>