<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/ic_events"
            android:title="@string/events" />
        <item
            android:id="@+id/weekly_report"
            android:icon="@drawable/ic_weekly_report"
            android:title="@string/weekly_report" />
        <item
            android:id="@+id/task"
            android:icon="@drawable/ic_completed_tasks"
            android:title="@string/task" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>