<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/profile">


    <fragment
        android:id="@+id/profile"
        android:name="com.example.spit_hackathon_ecoquest.Fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/weekly_report"
        android:name="com.example.spit_hackathon_ecoquest.Fragments.WeeklyReportFragment"
        android:label="@string/weekly_report"
        tools:layout="@layout/fragment_weekly_report" />
    <fragment
        android:id="@+id/task"
        android:name="com.example.spit_hackathon_ecoquest.Fragments.TaskFragment"
        android:label="@string/task"
        tools:layout="@layout/fragment_task" />
    <fragment
        android:id="@+id/settings"
        android:name="com.example.spit_hackathon_ecoquest.Fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/events"
        android:name="com.example.spit_hackathon_ecoquest.Fragments.EventFragment"
        android:label="fragment_event"
        tools:layout="@layout/fragment_event" />
</navigation>