<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".BottomSheets.OrganizeAnEventBottomSheet">

    <TextView
        android:id="@+id/updateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/organize_an_event"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dryWasteTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/updateText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/title"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_title"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wetWasteTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dryWasteTextLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/location"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_location"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otherTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wetWasteTextLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/time"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_clock"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otherTextLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherTextLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/date"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_date"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otherTextLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/otherTextLayout1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/green_points"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_leaf"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/green_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/otherTextLayout2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_bg_2"
        android:backgroundTint="@color/green"
        android:elevation="10dp"
        android:fontFamily="@font/roboto"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="16sp" />


</RelativeLayout>