<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/shape_rounded_dialog"
    android:padding="15dp"
    android:layout_height="match_parent"
    tools:context=".BottomSheets.UpdateProgressBottomSheet">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/update_your_progress"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:id="@+id/updateText"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dryWasteTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/updateText"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/dry_waste"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_bin"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dryWaste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wetWasteTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dryWasteTextLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/wet_waste"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_bin"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wetWaste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otherTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wetWasteTextLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint="@string/others"
        android:textColorHint="@color/grey"
        app:boxStrokeColor="@color/green"
        app:hintTextColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_bin"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/grey" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/otherTextLayout"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_bg_2"
        android:backgroundTint="@color/green"
        android:elevation="10dp"
        android:fontFamily="@font/roboto"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="16sp" />


</RelativeLayout>